force-app/main/default/objects/Case/fields/Data_Export_Approved_At__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Approved_At__c</fullName>
    <label>Data Export Approved At</label>
    <type>DateTime</type>
</CustomField>