force-app/main/default/objects/Case/fields/Data_Export_Requested__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Requested__c</fullName>
    <label>Data Export Requested</label>
    <type>Checkbox</type>
</CustomField>