force-app/main/default/objects/Case/fields/First_Response_Hours__c.field-meta.xml
<CustomField>
    <fullName>First_Response_Hours__c</fullName>
    <formula>ROUND((FirstRespondedDate - CreatedDate) * 24, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Response Hours</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>