force-app/main/default/objects/Case/fields/Queue_Assignment_Checked__c.field-meta.xml
<CustomField>
    <fullName>Queue_Assignment_Checked__c</fullName>
    <label>Queue Assignment Checked</label>
    <type>Checkbox</type>
</CustomField>