force-app/main/default/objects/Case/fields/Root_Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Category__c</fullName>
    <defaultValue>Unknown</defaultValue>
    <label>Root Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>