force-app/main/default/objects/Case/fields/SLA_Severity__c.field-meta.xml
<CustomField>
    <fullName>SLA_Severity__c</fullName>
    <defaultValue>P3</defaultValue>
    <label>SLA Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
                <default>true</default>
                <label>P3</label>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>