force-app/main/default/objects/Case/validationRules/High_Priority_Requires_Subject.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Requires_Subject</fullName>
    <active>true</active>
    <description>Prevents high-priority cases from being created without a clear subject that queue routing can inspect.</description>
    <errorConditionFormula>AND(ISPICKVAL(Priority, 'High'), ISBLANK(Subject))</errorConditionFormula>
    <errorDisplayField>Subject</errorDisplayField>
    <errorMessage>High-priority cases must include a subject so the queue routing rules can dispatch them.</errorMessage>
</ValidationRule>