force-app/main/default/objects/Case/validationRules/Require_Resolution_For_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Resolution_For_Closed</fullName>
    <active>true</active>
    <description>Support hygiene rule: a closed case must record its resolution for knowledge reuse and audits.</description>
    <errorConditionFormula>AND(IsClosed, OR(ISBLANK(Resolution), LEN(TRIM(Resolution)) = 0))</errorConditionFormula>
    <errorDisplayField>Resolution</errorDisplayField>
    <errorMessage>Closed cases must include a Resolution so the outcome can be reused and audited.</errorMessage>
</ValidationRule>